@@ -275,13 +275,10 @@ condition|(
 name|bytes
 operator|.
 name|length
-operator|==
+operator|>
 literal|0
 condition|)
 block|{
-continue|continue;
-comment|// no associations for this document
-block|}
 comment|// aggreate association values for ordinals
 name|int
 name|bytesUpto
@@ -441,6 +438,7 @@ index|]
 operator|+=
 name|value
 expr_stmt|;
+block|}
 block|}
 operator|++
 name|doc
